@@ -2,6 +2,7 @@ version 0.81.03
 	--noshutter ( thx Piotr Dlugosz )
 	Support for Samsung GX-1L ??
 	K-5 IIs jpeg star calculation fix ??
+	Unknown camera segmentation fault bugfix
 	Limited support for K-3 ( testing )
 
 version 0.81.02 ( 2013-11-01 )
